manifests/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attack
  
---
apiVersion: v1
kind: Namespace
metadata:
  name: es
