manifests/02-es.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: es
  labels:
    app: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - image: benhall/elasticsearch:1.4.2
        imagePullPolicy: Always
        name: es
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: es
  labels:
    service: es
spec:
  ports:
  - port: 9200
    targetPort: 9200
    protocol: TCP
  selector:
    app: es
